--- a/todolist.css
+++ b/todolist.css
@@ -9,7 +9,7 @@ body {
     /* 让背景图基于容器大小伸缩 */
     background-size: cover;
     /* 设置背景颜色，背景图加载过程中会显示背景色 */
-    background-color: pink;
+    background-color: grey;
     color: white;
 }
 
